--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@
   border: 0;
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color: grey;
 }
 
 canvas{
   background-color: greenyellow;
+}
+
+p{
+  color: white;
 }
