--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-* {
+body {
   border: 0;
   padding: 0;
   margin: 0;
   background-color: rgb(149, 186, 235);
 }
 
-canvas {
+#game {
   background-color: #000f08;
 }
-
+#color {
+  background-color: red;
+}
 p {
   color: white;
 }
