--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
   border: 0;
   padding: 0;
   margin: 0;
-  background-color: rgb(149, 186, 235);
+  background-image: url("./../assets/img/bg.jpg");
+  background-position: 0, 0;
+  background-repeat: no-repeat;
 }
 
 #game {
